# biped_go1

./: .gitmodules
go1_biped_bringup/: CMakeLists.txt  package.xml
go1_biped_bringup/config/: GV7.yml
go1_biped_bringup/launch/: go1.launch  go1_biped.launch  microstrain.launch
go1_biped_control/: CMakeLists.txt  package.xml
go1_biped_control/config/: GV7.yml  ekf.yaml  ekf_sim.yaml  microstrain.yaml
go1_biped_control/launch/: control.launch  control_sim.launch  ekf.launch  microstrain.launch
go1_biped_control/scripts/: go1_joint_republisher.py  go1_sim2real.py  sim_macguffin.py
go1_biped_description/: CMakeLists.txt  package.xml
go1_biped_description/launch/: description.launch
go1_biped_description/urdf/: go1_biped.urdf.xacro
go1_biped_omniverse/: CMakeLists.txt  package.xml
go1_biped_omniverse/launch/: omniverse_control.launch
go1_biped_omniverse/nn/: README.md
go1_biped_omniverse/scripts/: go1_sim2real.py  setup.sh
