<?xml version="1.0"?>
<package format="2">
  <name>go1_biped_bringup</name>
  <version>0.0.0</version>
  <description>The go1_biped_bringup package</description>

  <maintainer email="davesarmoury@gmail.com">Dave Niewinski</maintainer>

  <license>CC-BY-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>go1_biped_description</exec_depend>
  <exec_depend>go1_biped_control</exec_depend>
  <exec_depend>microstrain_inertial_driver</exec_depend>
  <exec_depend>unitree_legged_real</exec_depend>

  <export>
  </export>
</package>
