<?xml version="1.0"?>
<package format="2">
  <name>go1_biped_control</name>
  <version>0.0.0</version>
  <description>The go1_biped_control package</description>

  <maintainer email="davesarmoury@gmail.com">Dave Niewinski</maintainer>

  <license>CC-BY-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_localization</exec_depend>

  <export>
  </export>
</package>
