<?xml version="1.0"?>
<package format="2">
  <name>go1_biped_omniverse</name>
  <version>0.0.0</version>
  <description>The go1_biped_omniverse package</description>

  <maintainer email="davesarmoury@gmail.com">Dave Niewinski</maintainer>

  <license>CC-BY-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>unitree-legged-msgs</exec_depend>
  <exec_depend>sensor-msgs</exec_depend>
  <exec_depend>nav-msgs</exec_depend>
  <exec_depend>python3-pytorch-pip</exec_depend>

</package>
